# feataz

./: .gitignore  Auto Feature Create & EDA.ipynb  Feature Engine Polars.ipynb  LICENSE  Modeling test.ipynb  OneHot.ipynb  README.md  future_features.txt  mkdocs.yml  pyproject.toml  requirements.txt
docs/: examples.md  getting-started.md  index.md
docs/reference/: index.md
examples/: smoke.py
feataz/: base_init.py  encoding.py  feat_creation.py  main.py  utils.py
notebook/: feature_engineering_on_titanic_data.ipynb
notebook/tutorials/: tutorial_01_titanic_survival.py  tutorial_02_iris_measurements.py  tutorial_03_wine_quality.py  tutorial_04_california_housing.py  tutorial_05_heart_disease.py  tutorial_06_mushroom_edibility.py  tutorial_07_bike_sharing_timeseries.py  tutorial_08_stroke_risk.py  tutorial_09_bank_marketing.py  tutorial_10_insurance_charges.py
src/: autofeat.py  feat_interaction.py
src/feataz/: __init__.py  advanced.py  auto.py  base.py  diagnostics.py  discretize.py  encoders.py  features.py  impute.py  interaction.py  outliers.py  scale.py  selection.py  snapshot.py  vst.py
tests/: conftest.py  test_decision_tree_encoder.py  test_diagnostics.py  test_feature_selection.py  test_wine_transforms.py
